# othello-minimax

./: BoardState.cpp  BoardState.h  CMakeLists.txt  MinimaxMoveChooser.cpp  MinimaxMoveChooser.h  Othello.cpp  Othello.h  README.md  TextDisplay.cpp  TextDisplay.h
